crates/nirvash-macros/tests/fixtures/code_tests_legacy_args.rs
use nirvash_macros::code_tests;

#[code_tests(spec = Spec, binding = Binding)]
struct Spec;

struct Binding;

fn main() {}
